 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

March 17 2014, Shigio YAMAGUCHI

	libutil/pathconvert.c module was divided into the following two modules:
	o libutil/encodepath.c
	o global/convert.c
	According to the change, the function of the --path command of gtags(1)
	(undocumented) was moved to global(1)'s --path-convert command.

December 18 2013, Shigio YAMAGUCHI

	The following paths were removed from the candidate list of configuration file.

	/etc/global.conf (OLD_GTAGSCONF)
	/etc/gtags/global.conf (OLD_DEBIANCONF)

	These paths were not documented once.

November 17 2013, Shigio YAMAGUCHI

	Added two functions: copyfile(), copydirectory(). They remove the necessity
	of external command 'cp'.

June 17 2013, Shigio YAMAGUCHI

	Dependence to dbop.c module was eliminated from assoc.c module.

June 12 2013, Shigio YAMAGUCHI

	File 'HTML/sitekey' (--system-cgi option) was removed since it is unnecessary.

December 11 2012, Shigio YAMAGUCHI

	Some automake macros were changed as follows to avoid warning messages.
	o INCLUDES was changed to AM_CPPFLAGS
	o AC_PROG_RANLIB was removed.

December 3 2012, Shigio YAMAGUCHI

	[global/literal.c]
	Included fgrep's code of 4.3BSD.

October 20 2012, Shigio YAMAGUCHI

	Added support for type string of ctags.
	Configure script detects whether ctags has --gtags option or not.
	However, I don't know whether the ctags which has this option will be released.

	Exuberant Ctags with --gtags option:
	$ ctags --gtags -x ...
	D main              320 global/global.c  main(int argc, char **argv)
	R NULL              325 global/global.c  const char *av = NULL;
	=
	^-- Type string (D: definition, R: other than definition)
